# main.go
@@ -1,12 +1,13 @@
 package main
 
 import (
+	"backend/database"
 	_ "backend/docs"
 	"backend/handlers"
+	"log"
 
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
-
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -17,6 +18,8 @@ import (
 // @host localhost:8081
 // @BasePath /
 func main() {
+	database.Init() // Инициализация базы данных
+
 	router := gin.Default()
 
 	// Настройка CORS
@@ -31,10 +34,13 @@ func main() {
 	// Маршруты API
 	router.GET("/users", handlers.GetUsers)
 	router.GET("/users/:id", handlers.GetUserByID)
+	router.POST("/register", handlers.RegisterHandler)
+	router.POST("/confirm", handlers.ConfirmHandler)
 
 	// Swagger
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Запуск сервера
+	log.Println("Server started at http://localhost:8081")
 	router.Run(":8081")
 }
